# render-timing-for-unity

./: .gitignore  README.md  ~render.gisticon.io
RenderTiming/: browserdetect.js
RenderTiming/Assets/RenderTiming/: GpuTimer.cs  GpuTimerBase.cs  RenderTiming.cs  Test.unity
RenderTimingPlugin/: CMakeLists.txt  DX11DrawcallTimer.cpp  DX11DrawcallTimer.h  IDrawcallTimer.cpp  IDrawcallTimer.h  README.md  RenderTimingPlugin.cpp  RenderTimingPlugin.def  RenderTimingPlugin.h  bugreplay.properties  component  exports  imports
RenderTimingPlugin/Android/jni/: Android.mk  Application.mk
RenderTimingPlugin/AndroidBuild/: .gitignore
RenderTimingPlugin/AndroidBuild/app/: build.gradle
RenderTimingPlugin/AndroidBuild/app/src/main/: AndroidManifest.xml
RenderTimingPlugin/AndroidBuild/gradle/wrapper/: gradle-wrapper.properties
RenderTimingPlugin/MetalPlugin/: CMakeLists.txt
RenderTimingPlugin/Timers/: DX11DrawcallTimer.cpp  DX11DrawcallTimer.h  DX9DrawcallTimer.cpp  DX9DrawcallTimer.h  IDrawcallTimer.cpp  IDrawcallTimer.h  MetalDrawcallTimer.h  MetalDrawcallTimer.mm  MetalDrawcallTimerAdapter.h  MetalDrawcallTimerAdapter.mm  OpenGLDrawcallTimer.cpp  OpenGLDrawcallTimer.h
RenderTimingPlugin/Toolchains/: Android.cmake
RenderTimingPlugin/Unity/: IUnityGraphics.h  IUnityInterface.h  IUnityRenderingExtensions.h  IUnityShaderCompilerAccess.h
